# expense-tracking

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml  pyrightconfig.json
src/: bot.py  db.py  export_csv.py  formatting.py  models.py  receipt_parser.py  settings.py  telemetry.py
tests/: test_db.py  test_formatting.py  test_models.py
